fix(ronin): remove useless text

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
     <label class="muted"><input id="manualToggle" type="checkbox"> Enter address manually</label>
   </div>
   <div class="row">
-    <input id="addrInput" type="text" placeholder="0x... or ronin:..." />
+    <input id="addrInput" type="text" placeholder="0x..." />
   </div>
 
   <div class="row">
