feat(osint): add Arkham and DeBank quick links in popup; open current address in new tab

--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,13 @@
   <div id="msg"></div>
   <div id="error"></div>
 
+  <!-- OSINT quick-links -->
+  <div class="row muted">OSINT</div>
+  <div class="row" style="display:flex; gap:8px;">
+    <button id="arkhamBtn">Open in Arkham</button>
+    <button id="debankBtn">Open in DeBank</button>
+  </div>
+
   <hr style="margin:12px 0; border:none; border-top:1px solid #eee;">
   <div class="row muted">Import/Export</div>
   <div class="row" style="display:flex; gap:8px; align-items:center;">
