feat(osint): accept sample URLs for sources; auto-detect placeholder\n\n- Popup: remove {} requirement; updated hint text\n- toPattern(): detect address via explicit 0x/ronin, query params, or /address|token|account/ segment\n- openOsintPattern/buildOsintUrl now use toPattern()\n- Inline menu + popup buttons work with sample or {} patterns

--- a/popup.html
+++ b/popup.html
@@ -58,7 +58,7 @@
   <div id="osintList" class="row"></div>
   <div class="row" style="display:flex; gap:8px;">
     <input id="osintName" type="text" placeholder="Site name (e.g., Arkham)">
-    <input id="osintPattern" type="text" placeholder="URL pattern (e.g., intel.arkm.com/explorer/address/{})">
+    <input id="osintPattern" type="text" placeholder="Sample URL (paste any address URL, e.g., https://intel.arkm.com/explorer/address/0x…)">
   </div>
   <div class="actions">
     <button id="osintAddBtn">Add source</button>
