--- a/popup.html
+++ b/popup.html
@@ -64,6 +64,7 @@
     <button id="osintAddBtn">Add source</button>
   </div>
 
+  <script src="utils.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
