--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,13 @@
   <div id="msg"></div>
   <div id="error"></div>
 
+  <!-- Search by label -->
+  <div class="row muted">Search by label</div>
+  <div class="row">
+    <input id="searchLabel" type="text" placeholder="Search label…" />
+  </div>
+  <div id="searchResults" class="row"></div>
+
   <!-- OSINT quick-links (dynamic) -->
   <div class="row muted">OSINT</div>
   <div id="osintButtons" class="row" style="display:flex; flex-wrap:wrap; gap:8px;"></div>
