feat(notes): add Note field in popup below label; save/display notes in storage and JSON import/export; allow note-only entries

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,9 @@
   <div class="row">
     <input id="label" type="text" placeholder="Enter label" />
   </div>
+  <div class="row">
+    <textarea id="note" placeholder="Enter note (optional)" rows="3" style="width:100%; box-sizing:border-box; padding:6px 8px;"></textarea>
+  </div>
   <div class="actions">
     <button id="save">Save</button>
     <button id="delete" title="Remove existing label">Delete</button>
