feat(search): add separate search panel window to avoid popup overflow; open from popup with current query; navigate current tab to selected address

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,9 @@
   <div class="row">
     <input id="searchLabel" type="text" placeholder="Search label…" />
   </div>
+  <div class="row">
+    <button id="openSearchPanel">Open search panel</button>
+  </div>
   <div id="searchResults" class="row"></div>
 
   <!-- OSINT quick-links (dynamic) -->
