--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,13 @@
     #error { margin-top: 6px; color: #c62828; }
     #detectedRow { margin-bottom: 4px; }
     #detected { font-weight: 600; word-break: break-all; }
+    /* Search dropdown panel */
+    .search-row { position: relative; }
+    .search-toggle { position: absolute; right: 4px; top: 4px; padding: 4px 6px; font-size: 12px; }
+    .search-panel { position: absolute; left: 0; right: 0; top: 36px; background: #fff; border: 1px solid #ddd; border-radius: 6px; box-shadow: 0 8px 24px rgba(0,0,0,0.12); max-height: 260px; overflow: auto; z-index: 1000; }
+    .search-item { display: flex; align-items: center; justify-content: space-between; gap: 8px; padding: 6px 8px; border-bottom: 1px solid #f6f6f6; }
+    .search-item .meta { display: flex; flex-direction: column; }
+    .search-item .addr { font-family: monospace; color: #555; }
   </style>
 </head>
 <body>
@@ -40,13 +47,13 @@
 
   <!-- Search by label -->
   <div class="row muted">Search by label</div>
-  <div class="row">
+  <div class="row search-row" id="searchRow">
     <input id="searchLabel" type="text" placeholder="Search label…" />
+    <button id="openSearchPanel" class="search-toggle" title="Toggle search results" type="button">▼</button>
+    <div id="searchPanel" class="search-panel" style="display:none;">
+      <div id="searchPanelResults"></div>
+    </div>
   </div>
-  <div class="row">
-    <button id="openSearchPanel">Open search panel</button>
-  </div>
-  <div id="searchResults" class="row"></div>
 
   <!-- OSINT quick-links (dynamic) -->
   <div class="row muted">OSINT</div>
