--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
     .search-panel { position: absolute; left: 0; right: 0; top: 36px; background: #fff; border: 1px solid #ddd; border-radius: 6px; box-shadow: 0 8px 24px rgba(0,0,0,0.12); max-height: 260px; overflow: auto; z-index: 1000; }
     .search-item { display: flex; align-items: center; justify-content: space-between; gap: 8px; padding: 6px 8px; border-bottom: 1px solid #f6f6f6; }
     .search-item .meta { display: flex; flex-direction: column; }
-    .search-item .addr { font-family: monospace; color: #555; }
+    .search-item .addr { font-family: monospace; color: #555; cursor: pointer; word-break: break-all; }
   </style>
 </head>
 <body>
