--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@
     #results { max-height: 480px; overflow: auto; }
     .item { display:flex; align-items:center; justify-content:space-between; gap:8px; padding:6px 0; border-bottom:1px solid #f2f2f2; }
     .meta { display:flex; flex-direction:column; }
-    .addr { font-family: monospace; color:#555; }
+    .addr { font-family: monospace; color:#555; cursor: pointer; word-break: break-all; }
     .actions { display:flex; gap:8px; }
   </style>
   <script src="utils.js"></script>
